Fix social media bar spacing bug in contact page

--- a/src/app/contact/pages/contact-container.scss
+++ b/src/app/contact/pages/contact-container.scss
@@ -16,4 +16,9 @@
             padding: 30px 20px;
         }
     }
+
+    > .rsc-social-media-bar {
+        grid-column: 1 / -1;
+        margin-top: 30px;
+    }
 }
